--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "newscurator-frontend",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.0",
+    "axios": "^1.8.1",
     "expo": "~52.0.37",
+    "expo-linear-gradient": "^14.0.2",
+    "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.476.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
+    "react-redux": "^9.2.0",
     "tailwindcss": "3.4.17"
   },
   "devDependencies": {
